[package]
name = "functions"
version = "0.1.0"
authors = ["Rajesh Kannan Poraiyan <rajeshporaiyan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple library to build portable serverless functions"
repository = "https://github.com/rajeshkannan/functions.git"
keywords = ["serverless", "functions", "aws", "azure", "cloudrun", "cloud", "lambda"]
categories = ["web-programming"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
